[gd_scene load_steps=2 format=2]

[ext_resource path="res://main/HUD.gd" type="Script" id=1]

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Control_score" type="Control" parent="."]
visible = false
margin_left = 5.0
margin_top = 5.0
margin_right = 122.0
margin_bottom = 52.0

[node name="Piedras" type="Label" parent="Control_score"]
margin_right = 68.0
margin_bottom = 14.0
text = "Score:"

[node name="Papeles" type="Label" parent="Control_score"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -7.0
margin_right = 68.0
margin_bottom = 7.0
text = "Score:"

[node name="Tijeras" type="Label" parent="Control_score"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -14.0
margin_right = 68.0
text = "Score:"

[node name="Control_Start" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.451
anchor_right = 0.5
anchor_bottom = 0.451
margin_left = -87.39
margin_top = -45.24
margin_right = 87.39
margin_bottom = 45.24

[node name="Cant-Texto" type="Label" parent="Control_Start"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -36.0
margin_right = 36.0
text = "CANTIDAD"

[node name="Cantidad" type="LineEdit" parent="Control_Start"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -29.0
margin_top = -30.0
margin_right = 29.0
margin_bottom = -10.0
align = 1

[node name="Error_ingreso" type="Label" parent="Control_Start"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -82.0
margin_top = -7.0
margin_right = 82.0
margin_bottom = 7.0
text = "Ingrese un numero valido"
align = 1

[node name="Start" type="Button" parent="Control_Start"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -25.0
margin_top = -20.0
margin_right = 25.0
text = "START"

[connection signal="pressed" from="Control_Start/Start" to="." method="_on_Start_pressed"]
